# eutils

./: Cargo.toml  Makefile.toml  README.md  todo.md
src/eu/eu_sleep/: Cargo.toml
src/eu/eu_sleep/src/: eu_sleep_bin.rs  eu_sleep_lib.rs
src/eu/eu_true/: Cargo.toml
src/eu/eu_true/src/: eu_true_bin.rs  eu_true_lib.rs
src/eu_multicall/: Cargo.toml  multicall.rs
src/utils/eu_common/: Cargo.toml
src/utils/eu_common/src/: lib.rs
src/utils/eu_sleep/: Cargo.toml
src/utils/eu_sleep/src/: sleep_bin.rs  sleep_lib.rs
src/utils/eu_template/: Cargo.toml
src/utils/eu_true/src/: eu_true_lib.rs
